Updated Unit Testing for OrderService